refactor: add words to paragraph in header

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <header>
             <img src="img/my-photo.jpg" alt="my personal photo">
             <div class="goal-description">
-                <h2>My mission is to create value</h2>
-                <p>I want to create value by building convenient, sustainable, accessible and useful websites.
+                <h2>My goal is to create value</h2>
+                <p>I want to create value by building convenient, sustainable, accessible and useful websites and web-applications.
                 </p>
             </div>
             <h1>Sherzodbek Yuldashev</h1>
