feat: add nav and skills sections

--- a/index.html
+++ b/index.html
@@ -12,17 +12,80 @@
         rel="stylesheet">
         <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
     <div class="container">
+
         <header>
             <img src="img/my-photo.jpg" alt="my personal photo">
             <div class="goal-description">
                 <h2>My goal is to create value</h2>
-                <p>I want to create value by building convenient, sustainable, accessible and useful websites and web-applications.
+                <p>"Hi. I am a Digital Marketing Manager at Mosaic Financial. After working with web developers and administering websites, I was ignited with the desire to learn how to build visual parts of a website myself. And now here I am, making this desire come true." 
                 </p>
             </div>
             <h1>Sherzodbek Yuldashev</h1>
         </header>
+
+        <nav>
+            <ul>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#information">Additional Information</a></li>
+                <li><a href="#contact">Contact Me</a></li>
+            </ul>
+        </nav>
+
+        <main>
+
+            <section id="skills">
+                <div class="section-container">
+                    
+                    <h2>SKILLS</h2>
+
+                    <ul class="skills-list">
+                        <li class="skills">
+                            <p>HTML</p>
+                            <div class="skills-container">
+                                <div class="bar html">80%</div>
+                            </div>
+                        </li>
+
+                        <li class="skills">
+                            <p>CSS</p>
+                            <div class="skills-container">
+                                <div class="bar css">60%</div>
+                            </div>
+                        </li>
+
+                        <li class="skills">
+                            <p>JS</p>
+                            <div class="skills-container">
+                                <div class="bar js">35%</div>
+                            </div>
+                        </li>
+
+                        <li class="skills">
+                            <p>Bash</p>
+                            <div class="skills-container">
+                                <div class="bar bash">30%</div>
+                            </div>
+                        </li>
+
+                        <li class="skills">
+                            <p>Git/Github</p>
+                            <div class="skills-container">
+                                <div class="bar git">40%</div>
+                            </div>
+                        </li>
+
+                    </ul>
+                </div>
+            </section>
+        </main>
+
     </div>
 </body>
 </html>
