feat: add work-experience section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="container">
 
-        <header>
+        <header id="header">
             <img src="img/my-photo.jpg" alt="my personal photo">
             <div class="goal-description">
                 <h2>My goal is to create value</h2>
@@ -38,9 +38,14 @@
             </ul>
         </nav>
 
+        <div class="fixedButton">
+            <a href="#header"><img src="img/up-icon.png" alt="up sign" class="up-sign"></a>
+        </div>
+
         <main>
 
             <section id="skills">
+
                 <div class="section-container">
                     
                     <h2>SKILLS</h2>
@@ -81,6 +86,74 @@
                             </div>
                         </li>
 
+                    </ul>
+                </div>
+            </section>
+
+            <section id="experience">
+                <div class="section-container">
+                    <h2>
+                        WORK EXPERIENCE
+                    </h2>
+
+                    <ul class="experience-list"> <!--should use flex-->
+
+                        <li class="work mosaic-financial"> 
+                            <p class="work-period">Feb 2022 - current date</p>
+                            <h3><span>Company:</span> Mosaic Financial</h3>
+                            <p class="position"> <span>Position:</span> Marketing Manager</p> <br>
+                            <p class="duty">Duties:</p>
+                            <ul class="duty-list"> 
+                                <li>SMM</li>
+                                <li>Web design</li>
+                                <li>Web Administration</li>
+                                <li>Copywriting</li>
+                                <li>Branding</li>
+                                <li>Targeting Ads</li>
+                                <li>Email marketing</li>
+                            </ul>
+                            <p class="link"><a href="https://mosaic-financial.uz/" target="_blank">www.mosaic-financial.uz</a></p>
+                        </li>
+
+                        <li class="work unemployed"> 
+                            <p class="work-period">Oct 2021 - Feb 2022</p>
+                            <h3><span>Company:</span> Freelance</h3>
+                            <p class="position"><span>Position:</span> SMM Project</p> <br>
+                            <p class="duty">Duties:</p>
+                            <ul class="duty-list"> 
+                                <li>Targeting Ads</li>
+                                <li>Copywrting</li>
+                                <li>Account management</li>
+                            </ul>
+                        </li>
+
+                        <li class="work vantage"> 
+                            <p class="work-period">Feb 2021 - Oct 2021</p>
+                            <h3><span>Company:</span> Vantage Focus</h3>
+                            <p class="position"><span>Position:</span> Digital Marketing Manager</p>
+                            <p class="duty">Duties:</p>
+                            <ul class="duty-list"> 
+                                <li>SMM</li>
+                                <li>Web design</li>
+                                <li>Web Administration</li>
+                                <li>Copywriting</li>
+                                <li>Targeting Ads</li>
+                            </ul>
+                            <p class="link"><a href="https://www.vantagepharm.com/en" target="_blank">www.vantagepharm.uz</a></p>
+                        </li>
+
+                        <li class="work uzcsd"> 
+                            <p class="work-period">Apr 2019 - Feb 2021</p>
+                            <h3><span>Company:</span> UzCSD</h3>
+                            <p class="position"><span>Position:</span> Senior Specialist of PR Department</p>
+                            <p class="duty">Duties:</p>
+                            <ul class="duty-list"> <!--should use flex-->
+                                <li>Copywriting</li>
+                                <li>Web Administration</li>
+                                <li>Content Management</li>
+                            </ul>
+                            <p class="link"><a href="https://deponet.uz/" target="_blank">www.deponet.uz</a></p>
+                        </li>
                     </ul>
                 </div>
             </section>
