feat: add code example section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#education">Education</a></li>
-                <!-- <li><a href="#information">Additional Information</a></li> -->
+                <li><a href="#code-example">Code Example</a></li>
                 <li><a href="#contact">Contact Me</a></li>
             </ul>
         </nav>
@@ -326,25 +326,31 @@
                 </div>
             </section>
 
+            <!--CODE EXAMPLE SECTION-->
+
             <section id="code-example">
                 
                 <div class="section-container">
 
                     <h2> CODE EXAMPLE</h2>
                     
-                    <pre>
-                        <code>
-                            nav ul > li > a:hover {
-                                border-radius: 10px;
-                                background-color: rgba(0, 0, 0, 0.685);
-                                color: white;
-                                text-decoration: none;
-                                transform: scale(1.2);
-                                transition-property: transform;
-                                transition-duration: 250ms;
-                            }
-                        </code>
-                    </pre>
+                    <div class="code">
+
+            <pre>
+            <code>
+                <span class="blue">ul</span> <span class="orange">></span> <span class="blue">li</span> <span class="orange">></span> <span class="blue">a</span>:<span class="orange">hover</span> <span class="orange">{</span>
+                <span class="blue">border-radius</span>: 10px;
+                <span class="blue">background-color</span>: rgba(0, 0, 0, 0.685);
+                <span class="blue">color</span>: white;
+                <span class="blue">text-decoration</span>: none;
+                <span class="blue">transform</span>: scale(1.2);
+                <span class="blue">transition-property</span>: transform;
+                <span class="blue">transition-duration</span>: 250ms;
+                <span class="orange">}</span> 
+            </code>
+            </pre>
+
+                    </div>   
 
                 </div>
             </section>
