--- a/index.html
+++ b/index.html
@@ -360,9 +360,40 @@
         <!--FOOTER-->
 
         <footer id="contact">
+
+            <h2>CONTACTS</h2>
+
+            <div class="footer">
+
+                <div>
+                    <img src="img/github.svg" alt="" class="logo">
+                    <p><a href="https://github.com/sherzodbekyuldashev95" class="footerLink" target="_blank">sherzodbekyuldashev95</a></p>
+                </div>
+
+                <div>
+                    <img src="img/gmail.svg" alt="" class="logo">
+                    <p><a href="mailto: sherzodbekyuldashev95@gmail.com" class="footerLink">sherzodbekyuldashev95@gmail.com</a></p>
+                </div>
+
+                <div>
+                    <img src="img/telegram.svg" alt="" class="logo">
+                    <p><a href="https://t.me/sh_yuldashev" class="footerLink" target="_blank">sh_yuldashev</a></p>
+                </div>
+
+                <div>
+                    <img src="img/call.png" alt="" class="logo">
+                    <p><a href="tel:+998909801016" class="footerLink">(+998)90 980 10 16</a></p>
+                </div>
+
+            </div>
             
-        </footer>
+            <div>
+                <p class="last-note"> &copy; sherzodyuldashev.com. All rights reserved.</p>
+            </div>
+
+        </footer>   
 
     </div>
+
 </body>
 </html>
