feat: add RS school logo

--- a/index.html
+++ b/index.html
@@ -366,29 +366,32 @@
             <div class="footer">
 
                 <div>
-                    <img src="img/github.svg" alt="" class="logo">
+                    <img src="img/github.svg" alt="github logo" class="logo">
                     <p><a href="https://github.com/sherzodbekyuldashev95" class="footerLink" target="_blank">sherzodbekyuldashev95</a></p>
                 </div>
 
                 <div>
-                    <img src="img/gmail.svg" alt="" class="logo">
+                    <img src="img/gmail.svg" alt="gmail logo" class="logo">
                     <p><a href="mailto: sherzodbekyuldashev95@gmail.com" class="footerLink">sherzodbekyuldashev95@gmail.com</a></p>
                 </div>
 
                 <div>
-                    <img src="img/telegram.svg" alt="" class="logo">
+                    <img src="img/telegram.svg" alt="telegram logo" class="logo">
                     <p><a href="https://t.me/sh_yuldashev" class="footerLink" target="_blank">sh_yuldashev</a></p>
                 </div>
 
                 <div>
-                    <img src="img/call.png" alt="" class="logo">
+                    <img src="img/call.png" alt="phone image" class="logo"> 
                     <p><a href="tel:+998909801016" class="footerLink">(+998)90 980 10 16</a></p>
                 </div>
 
             </div>
             
-            <div>
-                <p class="last-note"> &copy; sherzodyuldashev.com. All rights reserved.</p>
+            <div class="rs-school">
+                <a href="https://app.rs.school/" target="_blank">
+                    <img src="img/rs-school.png" alt="rs-school logo">
+                    <p class="last-note">RS School: JS/FE EN 2022 Q3.</p>
+                </a>
             </div>
 
         </footer>   
