--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                                <li>
                                 <div class="name"> 
                                     <img src="img/codecademy.png" alt="codecademy logo">
-                                    <a href="https://www.codecademy.com/profiles/SherzodbekYuldashev/certificates/a8ab218d5950c29861635cc0bf12fd13" class="link" target="_blank"><p>Codecademy: Git & GitHub</p></a>
+                                    <a href="https://www.codecademy.com/profiles/SherzodbekYuldashev/certificates/a8ab218d5950c29861635cc0bf12fd13" class="link" target="_blank"><p>Codecademy: Git and GitHub</p></a>
                                 </div>
                                </li>
 
