fix: add html intities

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 
             <pre>
             <code>
-                <span class="blue">ul</span> <span class="orange">></span> <span class="blue">li</span> <span class="orange">></span> <span class="blue">a</span>:<span class="orange">hover</span> <span class="orange">{</span>
+                <span class="blue">ul</span> <span class="blue">li</span> <span class="blue">a</span>:<span class="orange">hover</span> <span class="orange">{</span>
                 <span class="blue">border-radius</span>: 10px;
                 <span class="blue">background-color</span>: rgba(0, 0, 0, 0.685);
                 <span class="blue">color</span>: white;
