fix: correct links

--- a/index.html
+++ b/index.html
@@ -367,11 +367,11 @@
                     <p><a href="https://t.me/sh_yuldashev" class="footerLink" target="_blank" rel="noopener">sh_yuldashev</a></p>
                 </div>
 
-            </div>
+            </div> <!--need to change the link and logo-->
             <div class="rs-school">
-                <a href="https://app.rs.school/" target="_blank" rel="noopener">
-                    <img src="img/rs-school.png" alt="rs-school logo">
-                    <p class="last-note">RS School: JS/FE EN 2022 Q3.</p>
+                <a href="https://rs.school/" target="_blank" rel="noopener">
+                    <img src="img/rs_school.svg" alt="rs-school logo">
+                    <p class="last-note">RS School. October 2022.</p>
                 </a>
             </div>
 
